# ERP-BE-CORE

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  router.py  socketio.py
app/core/: config.py  deps.py  exceptions.py  http_status.py  security.py
app/core/models/: base.py
app/infrastructure/: cache.py  cloudinary.py  logging.py  rate_limiter.py
app/infrastructure/mongo/: base_repository.py  client.py
app/modules/auth/: repository.py  router.py  schemas.py  service.py
app/modules/categories/: repository.py  router.py  schemas.py  service.py
app/modules/dashboard/: repository.py  router.py  service.py
app/modules/products/: repository.py  router.py  schemas.py  service.py
app/modules/roles/: repository.py  router.py  schemas.py  service.py
app/modules/sales/: repository.py  router.py  schemas.py  service.py
app/modules/users/: repository.py  router.py  schemas.py  service.py
app/schemas/: response.py
scripts/: seed.py
tests/: conftest.py  test_auth.py  test_products.py  test_sales.py
